// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders correctly with internal 1`] = `
<a
  href="/home"
  onClick={[Function]}
>
  <div />
</a>
`;

exports[`Link renders correctly with internal 2`] = `
<a
  href="https://www.google.com"
  to="https://www.google.com"
>
  <div />
</a>
`;
